crates/fastclaw-cli/src/tui/snapshots/fastclaw__tui__tests__input_slash_suggestion.snap
---
source: crates/fastclaw-cli/src/tui/mod.rs
expression: terminal.backend().to_string()
---
"┌──────────────────────────────────────────────────────────┐────────────────────"
"│ /help         Show available commands                    │                    "
"└──────────────────────────────────────────────────────────┘                    "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
